--- a/article-js.html
+++ b/article-js.html
@@ -86,9 +86,9 @@
   <main>
     <div class="tabs">
       <div class="tab-buttons">
-        <button class="tab-button" data-tab="tab1"><i class="fa fa-arrow-left" aria-hidden="true"></i></button>
+        <button class="tab-button" data-tab="tab1">HTML</button>
         <button class="tab-button" data-tab="tab2">CSS</button>
-        <button class="tab-button" data-tab="tab3">JS</button>
+        <button class="tab-button" data-tab="tab3"><i class="fa fa-arrow-left" aria-hidden="true"></i></button>
         
         <div class="dropdown">
           <button class="tab-button dropdown-toggle">Ещё ▾</button>
