--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <title>LIBRARY</title>
   <link rel="stylesheet" href="./assets/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./styles/style.css">
-  <!-- <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script> -->
   <style>
     .hidden {display: none !important;}
-    
+    .empty {padding: 20px;color: #777;font-style: italic;}
+    .loading {padding: 20px;color: #444;}
   </style>
 </head>
 <body>
@@ -20,7 +20,7 @@
       <img src="./assets/icons/html-icon.png" alt="html-icon">
       <img src="./assets/icons/css-icon.png" alt="css-icon">
       <img src="./assets/icons/js-icon.png" alt="css-icon">
-      <span class="header-logo-span">LIBRARY</span class="header-logo-span">
+      <span><a class="header-logo-span" href="index.html">LIBRARY</a></span class="header-logo-span">
     </div>
 
     <button class="burger-menu" aria-label="Открыть меню">&#9776;</button>
@@ -62,11 +62,7 @@
         </div>
       </div>
 
-      <div class="tab-content" id="tab1">
-        <!-- <div id="article">
-          <p class="loading">Загрузка статьи...</p>
-        </div> -->
-      </div>
+      <div class="tab-content" id="tab1"></div>
       <div class="tab-content" id="tab2"></div>
       <div class="tab-content" id="tab3"></div>
       <div class="tab-content" id="tab4"></div>
@@ -93,46 +89,7 @@
   </footer>
   <button id="scrollToTopButton">&#8593;</button>
 
-  <!-- <script>
-    const supabase = window.supabase.createClient(
-      'https://dftxrmlepmufduwxtwxr.supabase.co',
-      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRmdHhybWxlcG11ZmR1d3h0d3hyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTEwMTM3NzYsImV4cCI6MjA2NjU4OTc3Nn0.E5CDsvpDNzWhVATuqEcflQGtRH6jH3J1imtGKO3yX70'
-    );
-
-    const params = new URLSearchParams(window.location.search);
-    const slug = params.get('slug');
-
-    if (!slug) {
-      document.getElementById('article').innerHTML = '<p>Ошибка: slug статьи не указан.</p>';
-    } else {
-      loadArticle(slug);
-    }
-
-    async function loadArticle(slug) {
-      const { data: article, error } = await supabase
-        .from('articles')
-        .select('*')
-        .eq('slug', slug)
-        .single();
-
-      const container = document.getElementById('article');
-
-      if (error || !article) {
-        container.innerHTML = '<p>Статья не найдена.</p>';
-        return;
-      }
-
-      container.innerHTML = `
-        <h1>${article.title}</h1><hr>
-        <div>${article.content}</div>
-      `;
-      if (window.Prism) {
-        Prism.highlightAll();
-      }
-    }
-
-    
-  </script> -->
+  <script src="./scripts/render/renderTabs.js"></script>
   <script src="./scripts/main.js" type="module"></script>
 </body>
 </html>
