--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <img src="./assets/icons/html-icon.png" alt="html-icon">
       <img src="./assets/icons/css-icon.png" alt="css-icon">
       <img src="./assets/icons/js-icon.png" alt="css-icon">
-      <span><a class="header-logo-span" href="index.html">LIBRARY</a></span class="header-logo-span">
+      <span><a class="header-logo-span" href="./pages/home.html">LIBRARY</a></span class="header-logo-span">
     </div>
 
     <button class="burger-menu" aria-label="Открыть меню">&#9776;</button>
