--- a/article-react.html
+++ b/article-react.html
@@ -5,7 +5,7 @@
   <link rel="shortcut icon" href="./assets/images/image.jpg" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="color-scheme" content="light dark">
-  <title>CSS</title>
+  <title>REACT</title>
   <link rel="stylesheet" href="./assets/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./styles/style.css">
   <style>
@@ -57,6 +57,11 @@
       ul{margin-left: 10px;}
       ol {margin-left: 10px;}
       li {line-height: 20px;padding: 0px;}
+      .tab-content h1 {font-size: 28px;}
+      .tab-content h2 {padding: 15px 0px;text-decoration: underline;font-size: 25px;}
+      .tab-content h3 {font-size: 20px;}
+      .tab-content h4{font-size: 18px;}
+      .tab-content li {font-size: 16px;}
     }
     .empty {padding: 20px;color: #777;font-style: italic;}
   </style>
@@ -87,7 +92,7 @@
     <div class="tabs">
       <div class="tab-buttons">
         <button class="tab-button" data-tab="tab1">HTML</button>
-        <button class="tab-button" data-tab="tab2"><i class="fa fa-arrow-left" aria-hidden="true"></i></button>
+        <button class="tab-button" data-tab="tab2">CSS</button>
         <button class="tab-button" data-tab="tab3">JS</button>
         
         <div class="dropdown">
