--- a/article.html
+++ b/article.html
@@ -5,7 +5,7 @@
   <link rel="shortcut icon" href="./assets/images/image.jpg" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="color-scheme" content="light dark">
-  <title>Page</title>
+  <title>HTML</title>
   <link rel="stylesheet" href="./assets/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./styles/style.css">
   <style>
