--- a/pages/toc-react.html
+++ b/pages/toc-react.html
@@ -6,7 +6,11 @@
   
 </ul>
 
+<ul>
+  <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-1">Начало работы с react </a></li>
+</ul>
 
 
 <!-- <a href="article-react.html">к темам</a> -->
 <!-- class="lang-js" -->
+<!-- &lt; -->
