react props page

--- a/pages/toc-react.html
+++ b/pages/toc-react.html
@@ -7,10 +7,11 @@
 </ul>
 
 <ul>
-  <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-1">Начало работы с react </a></li>
+  <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-1">Начало работы с react</a></li>
+  <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-2">PROPS</a></li>
 </ul>
 
 
-<!-- <a href="article-react.html">к темам</a> -->
+<!-- <a href="article-react.html">К темам</a> -->
 <!-- class="lang-js" -->
 <!-- &lt; -->
