--- a/pages/toc-react.html
+++ b/pages/toc-react.html
@@ -9,6 +9,7 @@
 <ul>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-1">Начало работы с react</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-2">PROPS</a></li>
+  <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-3">useState - управление состоянием в функциональных компонентах</a></li>
 </ul>
 
 
