react conditional rendering page

--- a/pages/toc-react.html
+++ b/pages/toc-react.html
@@ -10,6 +10,9 @@
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-1">Начало работы с react</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-2">PROPS</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-3">useState - управление состоянием в функциональных компонентах</a></li>
+  <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-4">this.setState - управление состоянием в классовых компонентах</a></li>
+  <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-5">Обработка событий в React</a></li>
+  <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-6">Условный рендеринг в React</a></li>
 </ul>
 
 
