react rendering lists page

--- a/pages/toc-react.html
+++ b/pages/toc-react.html
@@ -13,6 +13,7 @@
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-4">this.setState - управление состоянием в классовых компонентах</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-5">Обработка событий в React</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-6">Условный рендеринг в React</a></li>
+  <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-7">Рендеринг списков в React</a></li>
 </ul>
 
 
