react Flexbox page

--- a/article-react.html
+++ b/article-react.html
@@ -23,6 +23,7 @@
     }
     .table {overflow-x: auto;}
     table {
+      width: 100%;
       border: 1px solid gray;
       border-collapse: collapse;
       text-align: center;
@@ -59,8 +60,8 @@
       li {line-height: 20px;padding: 0px;}
       .tab-content h1 {font-size: 28px;}
       .tab-content h2 {padding: 15px 0px;text-decoration: underline;font-size: 25px;}
-      .tab-content h3 {font-size: 20px;}
-      .tab-content h4{font-size: 18px;}
+      .tab-content h3 {font-size: 20px; padding: 10px 0px;}
+      .tab-content h4 {font-size: 18px; padding: 10px 0px;}
       .tab-content li {font-size: 16px;}
     }
     .empty {padding: 20px;color: #777;font-style: italic;}
