--- a/pages/toc-react.html
+++ b/pages/toc-react.html
@@ -1,12 +1,17 @@
 <h2>Предварительные требования и подготовка</h2>
 
 <ul>
-  <li><h3>Современный JavaScript (ES6+)</h3></li>
+  <h3>Современный JavaScript (ES6+)</h3>
   <li><a class="pagesLinks" href="article-react.html?slug=react-1-1-1">Промисы, async/await, стрелочные функции, деструктуризация, REST/Spread-операторы, модули</a></li>
-  
 </ul>
 
 <ul>
+  <h3>HTML и CSS на уровне уверенного пользователя</h3>
+  <li><a class="pagesLinks" href="article-react.html?slug=react-1-2-1">Flexbox и Grid.</a></li>
+</ul>
+
+<ul>
+  <h3>Введение в react</h3>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-1">Начало работы с react</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-2">PROPS</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-3">useState - управление состоянием в функциональных компонентах</a></li>
