react css modules page

--- a/pages/toc-react.html
+++ b/pages/toc-react.html
@@ -19,7 +19,8 @@
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-5">Обработка событий в React</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-6">Условный рендеринг в React</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-7">Рендеринг списков в React</a></li>
-  <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-8">Валидация форм в React </a></li>
+  <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-8">Валидация форм в React</a></li>
+  <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-9">CSS Modules</a></li>
 </ul>
 
 
