react Styled Components page

--- a/pages/toc-react.html
+++ b/pages/toc-react.html
@@ -21,6 +21,7 @@
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-7">Рендеринг списков в React</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-8">Валидация форм в React</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-9">CSS Modules</a></li>
+  <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-10">Styled Components</a></li>
 </ul>
 
 
