--- a/pages/toc-react.html
+++ b/pages/toc-react.html
@@ -8,6 +8,7 @@
 <ul>
   <h3>HTML и CSS на уровне уверенного пользователя</h3>
   <li><a class="pagesLinks" href="article-react.html?slug=react-1-2-1">Flexbox и Grid.</a></li>
+  <li><a class="pagesLinks" href="article-react.html?slug=react-1-2-2">Семантическая разметка.</a></li>
 </ul>
 
 <ul>
