react todo app page

--- a/pages/toc-react.html
+++ b/pages/toc-react.html
@@ -24,12 +24,10 @@
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-9">CSS Modules</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-10">Styled Components</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-11">Tailwind CSS</a></li>
+  <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-12">Проект "TODO APP" на React</a></li>
 </ul>
 
 
 <!-- <a href="article-react.html">К темам</a> -->
 <!-- class="lang-js" -->
 <!-- &lt; -->
-
-Tailwind CSS
-
