--- a/pages/toc-react.html
+++ b/pages/toc-react.html
@@ -25,6 +25,7 @@
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-10">Styled Components</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-11">Tailwind CSS</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-12">Проект "TODO APP" на React</a></li>
+  <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-13">useEffect: введение</a></li>
 </ul>
 
 
