--- a/pages/toc-react.html
+++ b/pages/toc-react.html
@@ -13,6 +13,11 @@
 </ul>
 
 <ul>
+  <h3>Инструменты разработчика</h3>
+  <li><a class="pagesLinks" href="article-react.html?slug=react-1-3-1">Git и GitHub/GitLab</a></li>
+</ul>
+
+<ul>
   <h3>Введение в react</h3>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-1">Начало работы с react</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-2">PROPS</a></li>
