--- a/pages/toc-react.html
+++ b/pages/toc-react.html
@@ -34,6 +34,8 @@
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-13">useEffect: введение</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-14">useRef</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-15">useMemo</a></li>
+  <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-16">useCallback</a></li>
+  <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-17">useContext</a></li>
 </ul>
 
 
