--- a/pages/toc-react.html
+++ b/pages/toc-react.html
@@ -39,6 +39,7 @@
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-18">React: маршрутизация и роутеры</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-19">useNavigate</a></li>
   <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-20">Layout + Outlet: вложенные маршруты</a></li>
+  <li><a class="pagesLinks" href="article-react.html?slug=react-2-1-21">useParams: динамические маршруты</a></li>
 </ul>
 
 
